tests/suite/analyze/snapshots/suite__analyze__partial_redundancy_elimination__knoop_ruthing_steffen_earliest.snap
---
source: tests/suite/analyze/partial_redundancy_elimination.rs
assertion_line: 86
expression: earliest
---

                                                                                                    knoop_ruthing_steffen

                                                                                                           +--------------------------------------------+
                                                                                                           |                   enter:                   |
                                                                                                           | {}                                         |
                                                                                                           | (JUMP _1)                                  |
                                                                                                           | {}                                         |
                                                                                                           +--------------------------------------------+
                                                                                                             |
                                                                                                             |
                                                                                                             v
                                                        +--------------------------------------------+     +--------------------------------------------+
                                                        |                    _4:                     |     |                    _1:                     |
                                                        | {}                                         |     | {}                                         |
                                                        | (JUMP _5)                                  |     | (CJUMP (EQ (CONST 0) (CONST 0)) _2)        |
                                                        | {}                                         | <-- | {}                                         |
                                                        +--------------------------------------------+     +--------------------------------------------+
                                                          |                                                  |
                                                          |                                                  |
                                                          |                                                  v
                                                          |                                                +--------------------------------------------+
                                                          |                                                |                    _2:                     |
                                                          |                                                | {}                                         |
                                                          |                                                | (MOVE (TEMP _a) (TEMP _c))                 |
                                                          |                                                | {(ADD (TEMP _a) (TEMP _b))}                |
                                                          |                                                | (JUMP _3)                                  |
                                                          |                                                | {}                                         |
                                                          |                                                +--------------------------------------------+
                                                          |                                                  |
                                                          |                                                  |
                                                          |                                                  v
                                                          |                                                +--------------------------------------------+
                                                          |                                                |                    _3:                     |
                                                          |                                                | {}                                         |
                                                          |                                                | (MOVE (TEMP _x) (ADD (TEMP _a) (TEMP _b))) |
                                                          |                                                | {}                                         |
                                                          |                                                | (JUMP _5)                                  |
                                                          |                                                | {}                                         |
                                                          |                                                +--------------------------------------------+
                                                          |                                                  |
                                                          |                                                  |
                                                          |                                                  v
                                                          |                                                +--------------------------------------------+     +------------+
                                                          |                                                |                    _5:                     |     |    _7:     |
                                                          |                                                | {}                                         |     | {}         |
                                                          |                                                | (CJUMP (EQ (CONST 0) (CONST 0)) _6)        |     | (JUMP _18) |
                                                          +----------------------------------------------> | {}                                         | --> | {}         |
                                                                                                           +--------------------------------------------+     +------------+
                                                                                                             |                                                  |
                                                                                                             |                                                  |
                                                                                                             v                                                  |
                                                        +--------------------------------------------+     +--------------------------------------------+       |
                                                        |                    _9:                     |     |                    _6:                     |       |
                                                        | {}                                         |     | {(ADD (TEMP _a) (TEMP _b))}                |       |
                                                        | (JUMP _12)                                 |     | (CJUMP (EQ (CONST 0) (CONST 0)) _8)        |       |
                                                        | {}                                         | <-- | {}                                         |       |
                                                        +--------------------------------------------+     +--------------------------------------------+       |
                                                          |                                                  |                                                  |
                                                          |                                                  |                                                  |
                                                          v                                                  v                                                  |
     +--------------------------------------------+     +--------------------------------------------+     +--------------------------------------------+       |
     |                    _17:                    |     |                                            |     |                                            |       |
     | {}                                         |     |                    _12:                    |     |                    _8:                     |       |
     | (MOVE (TEMP _x) (ADD (TEMP _a) (TEMP _b))) |     | {}                                         |     | {}                                         |       |
     | {}                                         |     | (CJUMP (EQ (CONST 0) (CONST 0)) _17)       |     | (JUMP _11)                                 |       |
     | (JUMP _18)                                 |     | {}                                         |     | {}                                         |       |
     | {}                                         | <-- |                                            |     |                                            |       |
     +--------------------------------------------+     +--------------------------------------------+     +--------------------------------------------+       |
       |                                                  |                                                  |                                                  |
       |                                                  |                                                  |                                                  |
       |                                                  v                                                  v                                                  |
       |                                                +--------------------------------------------+     +--------------------------------------------+       |                +--------------------------------------------+
       |                                                |                    _15:                    |     |                                            |       |                |                    _10:                    |
       |                                                | {}                                         |     |                    _11:                    |       |                | {}                                         |
       |                                                | (MOVE (TEMP _y) (ADD (TEMP _a) (TEMP _b))) |     | {}                                         |       |                | (MOVE (TEMP _y) (ADD (TEMP _a) (TEMP _b))) |
       |                                                | {}                                         |     | (CJUMP (EQ (CONST 0) (CONST 0)) _14)       |       |                | {}                                         |
       |                                                | (JUMP _16)                                 |     | {}                                         |       |                | (JUMP _11)                                 |
       |                                                | {}                                         |  +> |                                            | ------+--------------> | {}                                         |
       |                                                +--------------------------------------------+  |  +--------------------------------------------+       |                +--------------------------------------------+
       |                                                  |                                             |    |                                                  |                  |
       |                                                  |                                             |    |                                                  |                  |
       |                                                  |                                             |    v                                                  |                  |
       |                                                  |                                             |  +--------------------------------------------+       |                  |
       |                                                  |                                             |  |                    _14:                    |       |                  |
       |                                                  |                                             |  | {}                                         |       |                  |
       |                                                  |                                             |  | (JUMP _16)                                 |       |                  |
       |                                                  |                                             |  | {}                                         |       |                  |
       |                                                  |                                             |  +--------------------------------------------+       |                  |
       |                                                  |                                             |    |                                                  |                  |
  +----+--------------------------------------------------+---------------------------------------------+    |                                                  |                  |
  |    |                                                  |                                                  v                                                  |                  |
  |    |                                                  |                                                +--------------------------------------------+       |                  |
  |    |                                                  |                                                |                    _16:                    |       |                  |
  |    |                                                  |                                                | {}                                         |       |                  |
  |    |                                                  |                                                | (MOVE (TEMP _x) (ADD (TEMP _a) (TEMP _b))) |       |                  |
  |    |                                                  |                                                | {}                                         |       |                  |
  |    |                                                  |                                                | (JUMP _18)                                 |       |                  |
  |    |                                                  +----------------------------------------------> | {}                                         |       |                  |
  |    |                                                                                                   +--------------------------------------------+       |                  |
  |    |                                                                                                     |                                                  |                  |
  |    |                                                                                                     |                                                  |                  |
  |    |                                                                                                     v                                                  |                  |
  |    |                                                                                                   +--------------------------------------------+       |                  |
  |    |                                                                                                   |                    _18:                    |       |                  |
  |    |                                                                                                   | {}                                         |       |                  |
  |    |                                                                                                   | (JUMP exit)                                |       |                  |
  |    +-------------------------------------------------------------------------------------------------> | {}                                         | <-----+                  |
  |                                                                                                        +--------------------------------------------+                          |
  |                                                                                                          |                                                                     |
  |                                                                                                          |                                                                     |
  |                                                                                                          v                                                                     |
  |                                                                                                        +--------------------------------------------+                          |
  |                                                                                                        |                   exit:                    |                          |
  |                                                                                                        | {}                                         |                          |
  |                                                                                                        +--------------------------------------------+                          |
  |                                                                                                                                                                                |
  +--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+

